<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/vehicleListFragment">

    <fragment
        android:id="@+id/vehicleListFragment"
        android:name="com.example.carlog.ui.VehicleListFragment"
        android:label="@string/title_vehicles"
        tools:layout="@layout/fragment_vehicle_list">
        <action
            android:id="@+id/action_vehicleListFragment_to_vehicleDetailFragment"
            app:destination="@id/vehicleDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/vehicleDetailFragment"
        android:name="com.example.carlog.ui.VehicleDetailFragment"
        android:label="@string/title_vehicle_details"
        tools:layout="@layout/fragment_vehicle_detail">
        <action
            android:id="@+id/action_vehicleDetailFragment_to_repairListFragment"
            app:destination="@id/repairListFragment" />
    </fragment>

    <fragment
        android:id="@+id/repairListFragment"
        android:name="com.example.carlog.ui.RepairListFragment"
        android:label="@string/title_repairs"
        tools:layout="@layout/fragment_repair_list" />
</navigation>